# MTalk

./: LICENSE  README.md
client/client/: client.c  client.h  error.c  handle_input.c  handle_input.h  handle_recv.c  handle_recv.h  send_output.c  send_output.h  tcp_connect.c  utils.c
client/client.xcodeproj/: project.pbxproj
client/client.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
client/client/handle_input/: handle_input.c  handle_input.h  handle_login_input.c  handle_login_input.h  handle_logout_input.c  handle_logout_input.h  (+6 more)
iOS/iOS/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
iOS/iOS.xcodeproj/: project.pbxproj
server/server/: base_socket.c  base_socket.h  error.c  fd_queue.c  fd_queue.h  handle.c  handle.h  protocol.c  protocol.h  send_data.c  send_data.h  server.c  server.h  setnonblock.c  typedefs.h  utils.c  utils.h
server/server.xcodeproj/: project.pbxproj
server/server/autoconf/: Makefile.am  configure.ac
server8080/: Makefile  Makefile.am  Makefile.in  base_socket.c  config.h  config.h.in  config.status  configure  configure.ac  error.c  fd_queue.c  send_data.c  send_data.h  server.h  tcp_listen.c  utils.c
server8080/.deps/: base_socket.Po  error.Po  fd_queue.Po  send_data.Po  server.Po  tcp_listen.Po  utils.Po
server8080/autom4te.cache/: output.0  requests  traces.0  traces.1
server8080/cJSON/.deps/: cJSON.Po
server8080/handle/: handle.c  handle_heart_beat.h  handle_login.c  handle_send.c  handle_test.c  handle_test.h  handle_user_list.c  handle_user_list.h
server8080/handle/.deps/: handle.Po  handle_heart_beat.Po  handle_login.Po  handle_send.Po  handle_test.Po  handle_user_list.Po
server8080/protocol/: data_error.c  data_error.h  login_request.h  login_response.h  logout_request.h  message.c  message.h  protocol.c  protocol.h  register_request.c  register_request.h  register_response.h  send_msg_response.c  user_info_request.h  user_list_request.c  user_list_request.h  user_list_response.h
server8080/protocol/.deps/: data_error.Po  login_request.Po  login_response.Po  logout_request.Po  logout_response.Po  message.Po  protocol.Po  register_request.Po  register_response.Po  send_msg_request.Po  send_msg_response.Po  user_info_request.Po  user_info_response.Po  user_list_request.Po  user_list_response.Po
test/test/: client.c
test/test.xcodeproj/: project.pbxproj
(+72 files in other folders)
